cmake_minimum_required(VERSION 3.19)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(main main.cpp)
add_executable(p1 p1.cpp)
add_executable(p2 p2.cpp)
add_executable(p3 p3.cpp)
add_executable(p4 p4.cpp)
add_executable(p5 p5.cpp)
add_executable(p5_ p5_.cpp)
add_executable(p6 p6.cpp)
add_executable(lru lru.cpp)
add_executable(test test.cpp)
add_executable(446 446.cpp)
add_executable(bibi bibi.cpp)
add_executable(20 20.cpp)
add_executable(169 169.cpp)
add_executable(234 234.cpp)
add_executable(283 283.cpp)
add_executable(448 448.cpp)
add_executable(5892 5892.cpp)
add_executable(414 414.cpp)
add_executable(434 434.cpp)
add_executable(187 187.cpp)
add_executable(352 352.cpp)
add_executable(273 273.cpp)
add_executable(476 476.cpp)
add_executable(488 488.cpp)
add_executable(ksA ksA.cpp)
add_executable(ksB ksB.cpp)
add_executable(319 319.cpp)
add_executable(23 23.cpp)
add_executable(400 400.cpp)
add_executable(test_problem test_problem.cpp)
add_executable(new new.cpp)
add_executable(Command_Sequence Command_Sequence.cpp)